6.7/api/Classes/classshapeworks_1_1OptimizeParameters.md
---
title: shapeworks::OptimizeParameters

---

# shapeworks::OptimizeParameters



 [More...](#detailed-description)


`#include <OptimizeParameters.h>`

## Public Functions

|                | Name           |
| -------------- | -------------- |
| | **[OptimizeParameters](../Classes/classshapeworks_1_1OptimizeParameters.md#function-optimizeparameters)**(ProjectHandle project) |
| void | **[save_to_project](../Classes/classshapeworks_1_1OptimizeParameters.md#function-save-to-project)**() |
| std::string | **[get_optimize_output_prefix](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-optimize-output-prefix)**() |
| void | **[set_optimize_output_prefix](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-optimize-output-prefix)**(std::string prefix) |
| std::vector< int > | **[get_number_of_particles](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-number-of-particles)**() |
| void | **[set_number_of_particles](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-number-of-particles)**(std::vector< int > number_of_particles) |
| double | **[get_initial_relative_weighting](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-initial-relative-weighting)**() |
| void | **[set_initial_relative_weighting](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-initial-relative-weighting)**(double value) |
| double | **[get_relative_weighting](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-relative-weighting)**() |
| void | **[set_relative_weighting](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-relative-weighting)**(double value) |
| double | **[get_starting_regularization](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-starting-regularization)**() |
| void | **[set_starting_regularization](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-starting-regularization)**(double value) |
| double | **[get_ending_regularization](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-ending-regularization)**() |
| void | **[set_ending_regularization](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-ending-regularization)**(double value) |
| int | **[get_iterations_per_split](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-iterations-per-split)**() |
| void | **[set_iterations_per_split](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-iterations-per-split)**(int value) |
| int | **[get_optimization_iterations](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-optimization-iterations)**() |
| void | **[set_optimization_iterations](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-optimization-iterations)**(int value) |
| bool | **[get_use_geodesic_distance](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-use-geodesic-distance)**() |
| void | **[set_use_geodesic_distance](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-use-geodesic-distance)**(bool value) |
| int | **[get_geodesic_cache_multiplier](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-geodesic-cache-multiplier)**() |
| void | **[set_geodesic_cache_multiplier](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-geodesic-cache-multiplier)**(int value) |
| std::vector< bool > | **[get_use_normals](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-use-normals)**() |
| void | **[set_use_normals](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-use-normals)**(std::vector< bool > use_normals) |
| double | **[get_normals_strength](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-normals-strength)**() |
| void | **[set_normals_strength](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-normals-strength)**(double value) |
| bool | **[get_use_disentangled_ssm](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-use-disentangled-ssm)**() |
| void | **[set_use_disentangled_ssm](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-use-disentangled-ssm)**(bool value) |
| bool | **[get_use_procrustes](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-use-procrustes)**() |
| void | **[set_use_procrustes](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-use-procrustes)**(bool value) |
| bool | **[get_use_procrustes_scaling](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-use-procrustes-scaling)**() |
| void | **[set_use_procrustes_scaling](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-use-procrustes-scaling)**(bool value) |
| bool | **[get_use_procrustes_rotation_translation](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-use-procrustes-rotation-translation)**() |
| void | **[set_use_procrustes_rotation_translation](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-use-procrustes-rotation-translation)**(bool value) |
| int | **[get_procrustes_interval](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-procrustes-interval)**() |
| void | **[set_procrustes_interval](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-procrustes-interval)**(int value) |
| bool | **[get_use_multiscale](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-use-multiscale)**() |
| void | **[set_use_multiscale](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-use-multiscale)**(bool value) |
| int | **[get_multiscale_particles](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-multiscale-particles)**() |
| void | **[set_multiscale_particles](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-multiscale-particles)**(int value) |
| double | **[get_narrow_band](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-narrow-band)**() |
| void | **[set_narrow_band](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-narrow-band)**(double value) |
| int | **[get_verbosity](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-verbosity)**() |
| void | **[set_verbosity](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-verbosity)**(int value) |
| bool | **[get_mesh_ffc_mode](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-mesh-ffc-mode)**() |
| void | **[set_mesh_ffc_mode](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-mesh-ffc-mode)**(bool value) |
| bool | **[get_use_landmarks](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-use-landmarks)**() |
| void | **[set_use_landmarks](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-use-landmarks)**(bool value) |
| bool | **[get_use_fixed_subjects](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-use-fixed-subjects)**() |
| void | **[set_use_fixed_subjects](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-use-fixed-subjects)**(bool value) |
| std::string | **[get_fixed_subjects_column](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-fixed-subjects-column)**() |
| void | **[set_fixed_subject_column](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-fixed-subject-column)**(std::string column) |
| std::string | **[get_fixed_subjects_choice](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-fixed-subjects-choice)**() |
| void | **[set_fixed_subjects_choice](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-fixed-subjects-choice)**(std::string choice) |
| void | **[set_abort_load](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-abort-load)**(bool value) |
| void | **[set_load_callback](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-load-callback)**(const std::function< void(int)> & f) |
| bool | **[set_up_optimize](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-up-optimize)**([Optimize](../Classes/classshapeworks_1_1Optimize.md) * optimize) |
| bool | **[is_subject_fixed](../Classes/classshapeworks_1_1OptimizeParameters.md#function-is-subject-fixed)**(std::shared_ptr< [Subject](../Classes/classshapeworks_1_1Subject.md) > subject) |
| int | **[get_checkpoint_interval](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-checkpoint-interval)**() |
| void | **[set_checkpoint_interval](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-checkpoint-interval)**(int iterations) |
| bool | **[get_save_init_splits](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-save-init-splits)**() |
| void | **[set_save_init_splits](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-save-init-splits)**(bool enabled) |
| bool | **[get_keep_checkpoints](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-keep-checkpoints)**() |
| void | **[set_keep_checkpoints](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-keep-checkpoints)**(bool enabled) |
| std::vector< std::string > | **[get_field_attributes](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-field-attributes)**() |
| void | **[set_field_attributes](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-field-attributes)**(std::vector< std::string > attributes) |
| std::vector< double > | **[get_field_attribute_weights](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-field-attribute-weights)**() |
| void | **[set_field_attribute_weights](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-field-attribute-weights)**(std::vector< double > weights) |
| bool | **[get_use_geodesics_to_landmarks](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-use-geodesics-to-landmarks)**() |
| void | **[set_use_geodesics_to_landmarks](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-use-geodesics-to-landmarks)**(bool value) |
| double | **[get_geodesic_to_landmarks_weight](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-geodesic-to-landmarks-weight)**() |
| void | **[set_geodesic_to_landmarks_weight](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-geodesic-to-landmarks-weight)**(double value) |
| std::string | **[get_particle_format](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-particle-format)**() |
| void | **[set_particle_format](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-particle-format)**(std::string format) |
| double | **[get_geodesic_remesh_percent](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-geodesic-remesh-percent)**() |
| void | **[set_geodesic_remesh_percent](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-geodesic-remesh-percent)**(double value) |
| bool | **[get_shared_boundary](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-shared-boundary)**() |
| void | **[set_shared_boundary](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-shared-boundary)**(bool value) |
| double | **[get_shared_boundary_weight](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-shared-boundary-weight)**() |
| void | **[set_shared_boundary_weight](../Classes/classshapeworks_1_1OptimizeParameters.md#function-set-shared-boundary-weight)**(double value) |
| [EarlyStoppingConfig](../Classes/structshapeworks_1_1EarlyStoppingConfig.md) | **[get_early_stopping_config](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-early-stopping-config)**() |
| [Parameters](../Classes/classshapeworks_1_1Parameters.md) | **[get_parameters](../Classes/classshapeworks_1_1OptimizeParameters.md#function-get-parameters)**() const |

## Detailed Description

```cpp
class shapeworks::OptimizeParameters;
```


This class encapsulated processing of Optimization parameters 

## Public Functions Documentation

### function OptimizeParameters

```cpp
explicit OptimizeParameters(
    ProjectHandle project
)
```


### function save_to_project

```cpp
void save_to_project()
```


### function get_optimize_output_prefix

```cpp
std::string get_optimize_output_prefix()
```


### function set_optimize_output_prefix

```cpp
void set_optimize_output_prefix(
    std::string prefix
)
```


### function get_number_of_particles

```cpp
std::vector< int > get_number_of_particles()
```


### function set_number_of_particles

```cpp
void set_number_of_particles(
    std::vector< int > number_of_particles
)
```


### function get_initial_relative_weighting

```cpp
double get_initial_relative_weighting()
```


### function set_initial_relative_weighting

```cpp
void set_initial_relative_weighting(
    double value
)
```


### function get_relative_weighting

```cpp
double get_relative_weighting()
```


### function set_relative_weighting

```cpp
void set_relative_weighting(
    double value
)
```


### function get_starting_regularization

```cpp
double get_starting_regularization()
```


### function set_starting_regularization

```cpp
void set_starting_regularization(
    double value
)
```


### function get_ending_regularization

```cpp
double get_ending_regularization()
```


### function set_ending_regularization

```cpp
void set_ending_regularization(
    double value
)
```


### function get_iterations_per_split

```cpp
int get_iterations_per_split()
```


### function set_iterations_per_split

```cpp
void set_iterations_per_split(
    int value
)
```


### function get_optimization_iterations

```cpp
int get_optimization_iterations()
```


### function set_optimization_iterations

```cpp
void set_optimization_iterations(
    int value
)
```


### function get_use_geodesic_distance

```cpp
bool get_use_geodesic_distance()
```


### function set_use_geodesic_distance

```cpp
void set_use_geodesic_distance(
    bool value
)
```


### function get_geodesic_cache_multiplier

```cpp
int get_geodesic_cache_multiplier()
```


### function set_geodesic_cache_multiplier

```cpp
void set_geodesic_cache_multiplier(
    int value
)
```


### function get_use_normals

```cpp
std::vector< bool > get_use_normals()
```


### function set_use_normals

```cpp
void set_use_normals(
    std::vector< bool > use_normals
)
```


### function get_normals_strength

```cpp
double get_normals_strength()
```


### function set_normals_strength

```cpp
void set_normals_strength(
    double value
)
```


### function get_use_disentangled_ssm

```cpp
bool get_use_disentangled_ssm()
```


### function set_use_disentangled_ssm

```cpp
void set_use_disentangled_ssm(
    bool value
)
```


### function get_use_procrustes

```cpp
bool get_use_procrustes()
```


### function set_use_procrustes

```cpp
void set_use_procrustes(
    bool value
)
```


### function get_use_procrustes_scaling

```cpp
bool get_use_procrustes_scaling()
```


### function set_use_procrustes_scaling

```cpp
void set_use_procrustes_scaling(
    bool value
)
```


### function get_use_procrustes_rotation_translation

```cpp
bool get_use_procrustes_rotation_translation()
```


### function set_use_procrustes_rotation_translation

```cpp
void set_use_procrustes_rotation_translation(
    bool value
)
```


### function get_procrustes_interval

```cpp
int get_procrustes_interval()
```


### function set_procrustes_interval

```cpp
void set_procrustes_interval(
    int value
)
```


### function get_use_multiscale

```cpp
bool get_use_multiscale()
```


### function set_use_multiscale

```cpp
void set_use_multiscale(
    bool value
)
```


### function get_multiscale_particles

```cpp
int get_multiscale_particles()
```


### function set_multiscale_particles

```cpp
void set_multiscale_particles(
    int value
)
```


### function get_narrow_band

```cpp
double get_narrow_band()
```


### function set_narrow_band

```cpp
void set_narrow_band(
    double value
)
```


### function get_verbosity

```cpp
int get_verbosity()
```


### function set_verbosity

```cpp
void set_verbosity(
    int value
)
```


### function get_mesh_ffc_mode

```cpp
bool get_mesh_ffc_mode()
```


### function set_mesh_ffc_mode

```cpp
void set_mesh_ffc_mode(
    bool value
)
```


### function get_use_landmarks

```cpp
bool get_use_landmarks()
```


### function set_use_landmarks

```cpp
void set_use_landmarks(
    bool value
)
```


### function get_use_fixed_subjects

```cpp
bool get_use_fixed_subjects()
```


### function set_use_fixed_subjects

```cpp
void set_use_fixed_subjects(
    bool value
)
```


### function get_fixed_subjects_column

```cpp
std::string get_fixed_subjects_column()
```


### function set_fixed_subject_column

```cpp
void set_fixed_subject_column(
    std::string column
)
```


### function get_fixed_subjects_choice

```cpp
std::string get_fixed_subjects_choice()
```


### function set_fixed_subjects_choice

```cpp
void set_fixed_subjects_choice(
    std::string choice
)
```


### function set_abort_load

```cpp
void set_abort_load(
    bool value
)
```


### function set_load_callback

```cpp
void set_load_callback(
    const std::function< void(int)> & f
)
```


### function set_up_optimize

```cpp
bool set_up_optimize(
    Optimize * optimize
)
```


### function is_subject_fixed

```cpp
bool is_subject_fixed(
    std::shared_ptr< Subject > subject
)
```


### function get_checkpoint_interval

```cpp
int get_checkpoint_interval()
```


### function set_checkpoint_interval

```cpp
void set_checkpoint_interval(
    int iterations
)
```


### function get_save_init_splits

```cpp
bool get_save_init_splits()
```


### function set_save_init_splits

```cpp
void set_save_init_splits(
    bool enabled
)
```


### function get_keep_checkpoints

```cpp
bool get_keep_checkpoints()
```


### function set_keep_checkpoints

```cpp
void set_keep_checkpoints(
    bool enabled
)
```


### function get_field_attributes

```cpp
std::vector< std::string > get_field_attributes()
```


### function set_field_attributes

```cpp
void set_field_attributes(
    std::vector< std::string > attributes
)
```


### function get_field_attribute_weights

```cpp
std::vector< double > get_field_attribute_weights()
```


### function set_field_attribute_weights

```cpp
void set_field_attribute_weights(
    std::vector< double > weights
)
```


### function get_use_geodesics_to_landmarks

```cpp
bool get_use_geodesics_to_landmarks()
```


### function set_use_geodesics_to_landmarks

```cpp
void set_use_geodesics_to_landmarks(
    bool value
)
```


### function get_geodesic_to_landmarks_weight

```cpp
double get_geodesic_to_landmarks_weight()
```


### function set_geodesic_to_landmarks_weight

```cpp
void set_geodesic_to_landmarks_weight(
    double value
)
```


### function get_particle_format

```cpp
std::string get_particle_format()
```


### function set_particle_format

```cpp
void set_particle_format(
    std::string format
)
```


### function get_geodesic_remesh_percent

```cpp
double get_geodesic_remesh_percent()
```


### function set_geodesic_remesh_percent

```cpp
void set_geodesic_remesh_percent(
    double value
)
```


### function get_shared_boundary

```cpp
bool get_shared_boundary()
```


### function set_shared_boundary

```cpp
void set_shared_boundary(
    bool value
)
```


### function get_shared_boundary_weight

```cpp
double get_shared_boundary_weight()
```


### function set_shared_boundary_weight

```cpp
void set_shared_boundary_weight(
    double value
)
```


### function get_early_stopping_config

```cpp
EarlyStoppingConfig get_early_stopping_config()
```


### function get_parameters

```cpp
Parameters get_parameters() const
```


-------------------------------

Updated on 2025-10-13 at 18:47:49 +0000